# gscholar

./: README.md  pyproject.toml
Rustgscholar/: Cargo.toml  README.md  test_page.html
Rustgscholar/scripts/: export_cookies.py
Rustgscholar/src/: cookies.rs  crossref.rs  error.rs  gscholar.rs  lib.rs  llm_filter.rs  main.rs  openalex.rs  rankings.rs  semanticscholar.rs  unified.rs
Rustgscholar/src/prompts/: mod.rs  relevance_filter.rs
gscholar/: __main__.py  cookies.py  crossref.py  gscholar.py  rankings.py
