[package]
name = "rustgscholar"
version = "0.1.0"
edition = "2021"
description = "Google Scholar 3-Stage Literature Pipeline - Rust Microservice"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# HTTP client & server
reqwest = { version = "0.12", features = ["json", "cookies"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Parsing
scraper = "0.22"
regex = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1.3"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging & Metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
chrono = "0.4"
dirs = "6"
rand = "0.8"
url = "2"
urlencoding = "2.1.3"
rig-core = "0.27.0"

[lints.clippy]
unwrap_used = "deny"

[dev-dependencies]
tempfile = "3.23.0"
